--- a/app/src/main/res/layout/fragment_stages_entries.xml
+++ b/app/src/main/res/layout/fragment_stages_entries.xml
@@ -34,17 +34,31 @@
             tools:context=".views.fragments.StagesEntriesFragment" />
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/extendedFloatingActionButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_10sdp"
-            android:text="@string/export"
-            app:iconTint="?attr/background_color"
-            android:textColor="?attr/background_color"
             android:backgroundTint="@color/button_color"
             android:onClick="@{()->viewModel.exportPdfFromProjectDashboard()}"
+            android:text="@string/export"
+            android:textColor="?attr/background_color"
             app:icon="@drawable/ic_pdf"
+            app:iconTint="?attr/background_color"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_10sdp"
+            android:backgroundTint="@color/button_color"
+            android:onClick="@{()->viewModel.showStageWiseInfo(data)}"
+            android:text="Info"
+            android:textColor="?attr/background_color"
+            app:icon="@drawable/ic_info"
+            app:iconTint="?attr/background_color"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/extendedFloatingActionButton" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
