--- a/app/src/main/res/layout/project_list_recycler_view.xml
+++ b/app/src/main/res/layout/project_list_recycler_view.xml
@@ -69,15 +69,27 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/appCompatImageButton"
             android:layout_width="@dimen/_30sdp"
             android:layout_height="@dimen/_30sdp"
-            android:src="@drawable/ic_delete"
             android:layout_margin="@dimen/_10sdp"
+            android:background="@null"
             android:onClick="@{()->viewModel.deleteProjectData(data)}"
-            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/ic_delete"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/editButton"
-            android:background="@null"/>
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_margin="@dimen/_10sdp"
+            android:background="@null"
+            android:onClick="@{()->viewModel.showInfo(data)}"
+            android:src="@drawable/ic_info"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/appCompatImageButton"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
