--- a/app/src/main/res/layout/project_list_recycler_view.xml
+++ b/app/src/main/res/layout/project_list_recycler_view.xml
@@ -35,7 +35,10 @@
             android:lineSpacingExtra="@dimen/_5sdp"
             android:padding="@dimen/_2sdp"
             android:text="@{data.name}"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintHorizontal_bias="0"
             android:textColor="?attr/title_text_color"
+            app:layout_constraintEnd_toStartOf="@+id/appCompatImageButton3"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Sample" />
@@ -81,6 +84,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/appCompatImageButton2"
             android:layout_width="@dimen/_30sdp"
             android:layout_height="@dimen/_30sdp"
             android:layout_margin="@dimen/_10sdp"
@@ -89,6 +93,18 @@
             android:src="@drawable/ic_info"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/appCompatImageButton"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/appCompatImageButton3"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_margin="@dimen/_10sdp"
+            android:background="@null"
+            android:onClick="@{()->viewModel.showPaymentInfo(data)}"
+            android:src="@drawable/ic_payment"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/appCompatImageButton2"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
