--- a/app/src/main/res/layout/fragment_payment_upsert_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_payment_upsert_bottom_sheet.xml
@@ -75,7 +75,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/_40sdp"
             android:layout_margin="@dimen/_10sdp"
-            android:text="@{viewModel.paymentDate}"
+            android:text="@{viewModel.paymentDate.substring(0,10)}"
             android:onClick="@{()->viewModel.onSelectDateForPayment()}"
             app:layout_constraintTop_toBottomOf="@+id/priceTextView" />
 
@@ -85,7 +85,7 @@
             android:text="@{viewModel.commonModel.message}"
             android:elevation="@dimen/_10sdp"
             app:animateVisibility="@{viewModel.commonModel.showMessage}"
-            app:layout_constraintTop_toBottomOf="@+id/priceTextView"
+            app:layout_constraintTop_toBottomOf="@+id/dateSelectionButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
