--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -18,7 +18,7 @@
         android:title="Settings" />
 
     <item
-        android:id="@+id/rentalFragment"
+        android:id="@+id/rentDashboardFragment"
         android:icon="@drawable/business"
         android:title="Rental" />
 
