--- a/app/src/main/res/layout/rental_information_list_recycler_view.xml
+++ b/app/src/main/res/layout/rental_information_list_recycler_view.xml
@@ -47,10 +47,28 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_5sdp"
+            android:background="@drawable/toast_background"
+            android:backgroundTint="?attr/button_color"
+            android:elegantTextHeight="true"
+            android:letterSpacing="0.1"
+            android:paddingHorizontal="@dimen/_5sdp"
+            android:paddingVertical="@dimen/_2sdp"
+            android:text="@{data.productStatus}"
+            android:textColor="?attr/button_text_color"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Rented" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_5sdp"
             android:elegantTextHeight="true"
             android:letterSpacing="0.1"
             android:padding="@dimen/_2sdp"
-            android:text="@{data.productStatus}"
+            android:text="@{`Count - `+data.productCount}"
             android:textColor="?attr/title_text_color"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/infoButton"
@@ -66,14 +84,32 @@
             android:elegantTextHeight="true"
             android:letterSpacing="0.1"
             android:padding="@dimen/_2sdp"
-            android:text="@{`Count - `+data.productCount}"
+            android:text="@{data.rentedDate}"
             android:textColor="?attr/title_text_color"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/infoButton"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:layout_constraintTop_toBottomOf="@+id/textView6"
             tools:text="Rented" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_5sdp"
+            android:elegantTextHeight="true"
+            android:letterSpacing="0.1"
+            android:padding="@dimen/_2sdp"
+            android:textColor="?attr/title_text_color"
+            android:textSize="@dimen/_13sdp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/editButton"
+            app:layout_constraintTop_toBottomOf="@+id/appCompatImageButton"
+            app:rentalInformation="@{data}"
+            app:setBalanceAmount="@{viewModel.commonModel.rentalProductList}"
+            tools:text="₹ 100" />
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/editButton"
@@ -82,6 +118,7 @@
             android:background="@null"
             android:onClick="@{()->viewModel.deleteRentalProductData(data)}"
             android:src="@drawable/ic_delete"
+            android:tint="?attr/button_color"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -94,6 +131,7 @@
             android:background="@null"
             android:onClick="@{()->viewModel.editRentalInformation(data)}"
             android:src="@drawable/ic_edit"
+            android:tint="?attr/button_color"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/editButton"
             app:layout_constraintTop_toTopOf="parent" />
@@ -106,6 +144,7 @@
             android:background="@null"
             android:onClick="@{()->viewModel.showRentalInfoDialog(data)}"
             android:src="@drawable/ic_info"
+            android:tint="?attr/button_color"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/appCompatImageButton"
             app:layout_constraintTop_toTopOf="parent" />
