--- a/app/src/main/res/layout/rental_information_list_recycler_view.xml
+++ b/app/src/main/res/layout/rental_information_list_recycler_view.xml
@@ -13,6 +13,10 @@
             name="viewModel"
             type="com.chillminds.local_construction.view_models.DashboardViewModel" />
 
+        <variable
+            name="isLastIndex"
+            type="Boolean" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -22,6 +26,26 @@
         android:layout_marginVertical="@dimen/_2sdp"
         android:background="?attr/card_background"
         android:padding="@dimen/_10sdp">
+
+        <TextView
+            android:id="@+id/customerNameTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_5sdp"
+            android:layout_marginTop="52dp"
+            android:elegantTextHeight="true"
+            android:letterSpacing="0.2"
+            android:lineSpacingExtra="@dimen/_5sdp"
+            android:padding="@dimen/_2sdp"
+            android:text="@{data.customerName}"
+            android:textColor="?attr/title_text_color"
+            android:textStyle="bold"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintEnd_toStartOf="@+id/infoButton"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Sample" />
 
         <TextView
             android:id="@+id/nameTextView"
@@ -35,11 +59,12 @@
             android:padding="@dimen/_2sdp"
             android:text="@{data.productName + ` - ` + data.productCount}"
             android:textColor="?attr/title_text_color"
+            android:textStyle="bold"
             app:layout_constrainedWidth="true"
             app:layout_constraintEnd_toStartOf="@+id/infoButton"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/customerNameTextView"
             tools:text="Sample" />
 
         <TextView
@@ -78,6 +103,7 @@
             tools:text="Rented" />
 
         <TextView
+            android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_5sdp"
@@ -104,7 +130,7 @@
             android:textColor="?attr/title_text_color"
             android:textSize="@dimen/_13sdp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/bottomView"
             app:layout_constraintEnd_toEndOf="@+id/editButton"
             app:layout_constraintTop_toBottomOf="@+id/appCompatImageButton"
             app:rentalInformation="@{data}"
@@ -119,7 +145,7 @@
             android:onClick="@{()->viewModel.deleteRentalProductData(data)}"
             android:src="@drawable/ic_delete"
             android:tint="?attr/button_color"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/bottomView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -132,7 +158,7 @@
             android:onClick="@{()->viewModel.editRentalInformation(data)}"
             android:src="@drawable/ic_edit"
             android:tint="?attr/button_color"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/bottomView"
             app:layout_constraintEnd_toStartOf="@+id/editButton"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -145,9 +171,16 @@
             android:onClick="@{()->viewModel.showRentalInfoDialog(data)}"
             android:src="@drawable/ic_info"
             android:tint="?attr/button_color"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/bottomView"
             app:layout_constraintEnd_toStartOf="@+id/appCompatImageButton"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:id="@+id/bottomView"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_100sdp"
+            android:visibility="@{isLastIndex ? 0 : 8}"
+            app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
