--- a/app/src/main/res/layout/rental_product_list_recycler_view.xml
+++ b/app/src/main/res/layout/rental_product_list_recycler_view.xml
@@ -13,6 +13,10 @@
             name="viewModel"
             type="com.chillminds.local_construction.view_models.DashboardViewModel" />
 
+        <variable
+            name="isLastIndex"
+            type="Boolean" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -50,7 +54,7 @@
             android:elegantTextHeight="true"
             android:letterSpacing="0.1"
             android:padding="@dimen/_2sdp"
-            android:text="@{`Rental Price - ₹ `+data.rentalPrice}"
+            android:text="@{`Rental Price - Rs `+data.rentalPrice}"
             android:textColor="?attr/title_text_color"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/appCompatImageButton"
@@ -100,6 +104,14 @@
             android:tint="?attr/button_color"
             app:layout_constraintEnd_toStartOf="@+id/editButton"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:id="@+id/bottomView"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_100sdp"
+            android:visibility="@{isLastIndex ? 0 : 8}"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            tools:layout_editor_absoluteX="13dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
